--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "gulp-autoprefixer": "^7.0.1",
         "gulp-babel": "^8.0.0",
         "gulp-concat": "^2.6.1",
+        "gulp-fontgen": "^0.2.5",
         "gulp-newer": "^1.4.0",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.0.2",
